Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjObjectField.quorum
class Main
    Object v
    action Main
        v:SetValue()
        Test(v)
    end

    action Test(Text var)
    end
end
